# sablecc

./: .gitignore  .travis.yml
ant-files/: build.xml
grammars/: objectmacro.sablecc3  objectmacrointermediate.sablecc3
macros/: objectmacro-errormessage.objectmacro  objectmacro-intermediate.objectmacro  objectmacro-java.objectmacro  objectmacro2-c.objectmacro
src/org/sablecc/objectmacro/errormessage/: MIncorrectMacroType.java  MInvalidInsert.java
src/org/sablecc/objectmacro/exception/: CompilerException.java
src/org/sablecc/objectmacro/launcher/: CustomLexer.java  ObjectMacro.java  ObjectMacroBack.java
src/org/sablecc/objectmacro/structure/: Directive.java  GlobalIndex.java  Macro.java  Param.java
src/org/sablecc/objectmacro/walker/: DeclarationCollector.java  ParamReferenceCollector.java  VarVerifier.java
tests/objectmacro/c/: Composers.c  LinkedList.c  ListInt.c
tests/objectmacro/c/back/: CMakeLists.txt  internals.c
tests/objectmacro/c/back/macro/: LinkedList.c  LinkedList.h  LinkedListNode.h  Macro.c  Macro.h
tests/objectmacro/common/: doctrine_entity.objectmacro  jpa_entity.objectmacro  multi-model.objectmacro
tests/objectmacro/common/back-tests/: back.objectmacro
tests/objectmacro/common/front-tests/accepted/: test.objectmacro
tests/objectmacro/java/back/: Cycle.java  IncorrectType.java  Inserts.java  MacroNullIndex.java  Main.java  ParameterNull.java  Separator.java
tests/objectmacro/java/entity/: Main.java
utils/: regenerate-macros-c.sh  run-back-tests  run-back-tests-c.sh  run-realistic-tests
(+230 files in other folders)
